# touch-manager

./: .gitattributes  .gitignore  BUILD_PLAN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: build-dfu-util-macos.sh
.github/workflows/: ci.yml  release.yml
docs/: OFFICIAL_FIRMWARE_NOTICES.md  THIRD_PARTY_NOTICES.md
docs/licenses/: dfu-util-GPL-2.0.txt  libusb-LGPL-2.1.txt
src/: App.tsx  backend.ts  styles.css  types.ts
src-tauri/: Cargo.toml  catalog.json  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: catalog.rs  device.rs  diagnostics.rs  download.rs  firmware.rs  flash.rs  history.rs  lib.rs  main.rs
