[package]
name = "touch-manager"
version = "0.1.0"
description = "Firmware library and diagnostic manager for Synthux Touch 2"
authors = ["Ali Bross"]
edition = "2021"
license = "MIT"
readme = "../README.md"
keywords = ["synthux", "firmware", "dfu", "tauri"]

[lib]
name = "touch_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
hex = "0.4.3"
nusb = "0.2.4"
parking_lot = "0.12.5"
rusqlite = { version = "=0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serialport = { version = "4.9.0", default-features = false }
sha2 = "0.11.0"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.7.1"
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
